--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       "src": "icons/logo_512x512",
       "sizes": "512x512",
       "type": "png",
-      "purpose": "maskable"
+      "purpose": "any"
     },
     {
       "src": "icons/logo_144x144",
