--- a/manifest.json
+++ b/manifest.json
@@ -11,19 +11,19 @@
     {
       "src": "icons/logo_512x512",
       "sizes": "512x512",
-      "type": "png",
+      "type": "image/png",
       "purpose": "any"
     },
     {
       "src": "icons/logo_144x144",
       "sizes": "144x144",
-      "type": "png",
+      "type": "image/png",
       "purpose": "any"
     },
     {
       "src": "icons/logo_192x192",
       "sizes": "228x228",
-      "type": "png",
+      "type": "image/png",
       "purpose": "any"
     }
 
@@ -32,67 +32,67 @@
     {
       "src": "images/pic01",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic02",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic03",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic04",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic05",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic06",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic07",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic08",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic09",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic10",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic11",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic12",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     },
     {
       "src": "images/pic13",
       "sizes": "768x523",
-      "type": "webp"
+      "type": "image/webp"
     }
   ],
   "background_color": "#212931",
